--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "icetea-id-client",
-  "version": "1.0.1",
-  "main": "index.js",
+  "version": "1.0.2",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "start": "yarn ts-node src/index.ts",
