--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "icetea-id-client",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
@@ -23,13 +23,12 @@
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@magic-ext/oauth": "^0.3.0",
     "aws-sdk": "^2.747.0",
     "axios": "^0.20.0",
-    "crypto-es": "^1.2.6",
-    "rimraf": "^3.0.2"
+    "crypto-es": "^1.2.6"
   }
 }
